resources/css/main.scss
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";
@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap");
@import "swiper";
@import "animations";


.light{
// @layer base {
    // :root {
        --white: 254,254,254;
        --black: 34,34,34;
        --main-200: 224,218,229;
        --egg: 253,248,238;
        --main-600: 143,130,153;
        --main-700: 107,97,115;
        --main-800: 71,65,76;
        --main-900: 42, 30, 53;
    // }

    body{
        color: theme("colors.black");
    }

    .top-bottom-wave path {
        fill: theme('colors.main-200');
    }

    #background
    {
    background-image: url('/images/assets/__background_light.png');
    }

    h1,
    h2,
    h3,
    h4,
    h5 
    {
        color: theme("colors.main-900");
    }

    .btn-transition:hover {
        background-color: theme('colors.main-700');
        color: theme("colors.egg");
    }

    .pulse-cirle {
        background-color: theme('colors.main-200');
    }

    .work-div {
        color: theme("colors.black");
    }
    .tech-icon path {
        fill: theme('colors.main-600');
    }

    .typescript-icon .st0{
        fill: #8f8299;
    }

    .typescript-icon .st1{
        fill: #e0dae5;
    }

    .blob-div-projects {
        display: block;
    }

    .contact-form-container {
        background-color: theme('colors.egg');
    }

    .btn-transition-contact{
        background-color: theme('colors.main-500');
        transition: background-color 0.3s ease-out, color 0.3s ease-out;
    }

    .btn-transition-contact:hover {
        background-color: theme('colors.main-700');
        color: theme("colors.egg");
    }

    .opacity-screen {
        background-color: rgba(254, 254, 254, 0.63);
    } 

    #theme-switcher-icon  {
        color: theme('colors.main-700');
    }

    .genre-active 
    {
        background-color: theme('colors.main-600');
        color: theme('colors.white');;
    }

    .btn-transition-swiper{
        background-color: theme('colors.main-800');
        transition: background-color 0.3s ease-out, color 0.3s ease-out;
    }

    .btn-transition-swiper:hover {
        background-color: theme('colors.main-700');
        color: theme("colors.egg");
    }
    
// }
}

.dark {
    --white: 254,254,254;
    --black: 34,34,34;
    --egg: 253,246,213;
    --main-200: 71,65,76;
    --main-600: 224,218,229;
    --main-700: 107,97,115;
    --main-800: 71,65,76;
    
    color: theme('colors.white');
    .top-bottom-wave path {
        fill: theme('colors.main-200');
    }

    #background
    {
        background-image: url('/images/assets/____background_dark.png');
    }

    h1,
    h2,
    h3,
    h4,
    h5 
    {
        color: theme("colors.egg");
    }

    .btn-transition:hover {
        background-color: theme('colors.main-800');
        color: theme("colors.egg");
    }

    .pulse-cirle {
        background-color: rgba(224,218,229);
    }

    .work-div {
        color: theme("colors.black");
    }

    .tech-icon path {
        fill: theme('colors.main-600');
    }

    .typescript-icon .st0{
        fill: theme('colors.main-600');
    }

    .typescript-icon .st1{
        fill: theme('colors.main-800');
    }

    .blob-div-projects {
        display: none;
    }

    .contact-form-container {
        background-color: rgba(143,130,153);
    }

    .btn-transition-contact{
        background-color: theme('colors.main-800');
        transition: background-color 0.3s ease-out, color 0.3s ease-out;
    }

    .btn-transition-contact:hover {
        background-color: theme('colors.main-700');
        color: theme("colors.egg");
    }

    .opacity-screen {
        background-color: rgba(107,97,115, 0.63); 
    }

    #theme-switcher-icon  {
        color: theme('colors.egg');
    }

    .swiper-from-main-page {
        background-color: theme('colors.main-200');
    }

}


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

h1,
h2,
h3,
h4,
h5 {
    font-family: theme("fontFamily.headers");
    letter-spacing: 0.25rem;
    text-transform: capitalize;
}

body {
    font-family: theme("fontFamily.body");
    
    line-height: 1.25;
    font-size: 0.875rem;
}

ul {
    list-style-type: none;
}

a {
    text-decoration: none;
}

#navbar{
    z-index: 100;
}

 #background
 {
    width: 100%;
    background-repeat: repeat;
    background-position: center;
    background-size: contain;
 }

 //Project Image in Slider 
 .project-hero-img{
    z-index: 11;
    position: relative;
 }

 .project-hero-img::before{
    position: absolute;
    z-index: -1;
    content: '';
    height: 100%;
    width: 100%;
    top: -6px;
    left: -6px;
    background: theme('colors.main-500');
}

//Helper class for a project title
.title-transform {
    transition: all 0.3s ease-in-out;
}

.title-transform.hover-state {
    font-weight: 800;
}


// Button Transtion
.btn-transition {
    transition: background-color 0.3s ease-out, color 0.3s ease-out;
}

// Social Link Transition
.social-link-transition {
    transition: background-color 0.3s ease-out, color 0.3s ease-out, border 0.3s ease-out;
}

.social-link-transition:hover {
    background-color: theme("colors.egg");
    color: theme('colors.main-700');
    border: 1px solid theme('colors.main-700');
}

//navlinks
.nav-link {
    position: relative;
    transition: color 0.2s ease-out;
}

.nav-link:before, .nav-link:after
{
    position: absolute;
    left: 0px;
    width: 100%;
    height: 2px;
    background: theme("colors.egg");
    content: "";
    opacity: 0;
    transition: all 0.3s ease-out;
}

.nav-link:before
{
    top: 0px;
    transform: translateY(5px);
}

.nav-link:after
{
    bottom: 0px;
    transform: translateY(-5px);
}

.nav-link:hover:before, .nav-link:hover:after
{
    opacity: 1;
    transform: translateY(0px);
}

.nav-link:hover {
    color: theme('colors.egg');
}

//Transition: Button with a border + alert button
.btn-transition-border, .btn-transition-border-alert {
    transition: all 0.3s ease-out;
}

.btn-transition-border:hover {
    background-color: theme("colors.main-500");
    color: theme('colors.white');
    border: 1px solid theme('colors.main-500');
}

.btn-transition-border-alert:hover {
    background-color: #991b1b;
    color: theme('colors.white');
    border: 1px solid #991b1b;
}

// Hamburger animation
.hamburger {
    width: 28px;
    height: 28px;
    
    span {
      display: block;
      margin: 5px auto;
      background-color: theme('colors.white');
      width: 100%;
      height: 3px;
      border-radius: 5px;
      transition: all .5s ease;
    }
    

    &:hover {
      span:first-child{
        transform: translateY(-5px);
      }
      span:last-child{
         transform: translateY(5px);
      }
    }
  }
  
  /* Hambuger click animation to cross */
  .hamburger.is-opened {
    span:first-child{
      transform: translateY(8px) rotate(45deg);
    }
    
    span:nth-child(2) {
      transform: scaleX(0);
    }
    
    span:last-child{
      transform: translateY(-8px) rotate(-45deg);
    }
  }

